--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 tuat-feed-parser={path="tuat-feed-parser"}
-serde = {version="1.0.104",features=["derive"]}
+#serde = {version="1.0.104",features=["derive"]}
 tide = "0.6.0"
 async-std = {version = "1.5.0", features = ["attributes"]}
-tokio = {version = "0.2.11", features = ["rt-core"]}
+tokio = {version = "0.2.11", features = ["rt-core"], default-features = false}
