--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tuat-feed-parser={path="tuat-feed-parser"}
 tide = "0.6.0"
 async-std = {version = "1.5.0", features = ["attributes"]}
 tokio = {version = "0.2.11", features = ["rt-core"], default-features = false}
+anyhow = "1.0.31"
+structopt = "0.3.14"
