--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,7 +13,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: cache directories
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      
     - name: Build
       run: cargo build --verbose
+
     - name: Run tests
       run: cargo test --verbose
