--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = [
+    "tuat-feed-parser"
+]
+
 [dependencies]
 tuat-feed-parser={path="tuat-feed-parser"}
 #serde = {version="1.0.104",features=["derive"]}
