--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,31 +1,63 @@
-name: Rust
+name: CI
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+  push:
+    branches:
+      - master
+      - staging
+      - trying
+
+env:
+  RUSTFLAGS: -Dwarnings
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  build_and_test:
+    name: Build and test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        rust: [nightly, beta, stable]
 
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: cache directories
+    - uses: actions/checkout@master
+
+    - name: Cache cargo registry
       uses: actions/cache@v2
       with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        path: ~/.cargo/registry
+        key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-registry-${{ hashFiles('**/Cargo.toml') }}
 
-      
-    - name: Build
-      run: cargo build --verbose
+    - name: Cache cargo index
+      uses: actions/cache@v2
+      with:
+        path: ~/.cargo/git
+        key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-index-${{ hashFiles('**/Cargo.toml') }}
 
-    - name: Run tests
-      run: cargo test --all --verbose
+    - name: Cache cargo build
+      uses: actions/cache@v2
+      with:
+        path: target
+        key: ${{ matrix.os }}-${{ matrix.rust }}-cargo-build-target-${{ hashFiles('**/Cargo.toml') }}
+    
+    - name: fmt
+      uses: actions-rs/cargo@v1
+      with:
+        toolchain: ${{matrix.rust}}
+        command: fmt
+        args: --all --tests --examples -- --check
+
+    - name: check
+      uses: actions-rs/cargo@v1
+      with:
+        toolchain: ${{matrix.rust}}
+        command: check
+        args: --all --bins --tests --examples
+    
+    - name: tests
+      uses: actions-rs/cargo@v1
+      with:
+        toolchain: ${{matrix.rust}}
+        command: test
+        args: --all
