--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
+      
+    - name: Install rust
+      uses: actions-rs/toolchain@v1
+      with:
+          toolchain: ${{matrix.rust}}
+          override: true
+          components: rustfmt, clippy
 
     - name: Cache cargo registry
       uses: actions/cache@v2
