--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,7 +51,7 @@ jobs:
       with:
         toolchain: ${{matrix.rust}}
         command: fmt
-        args: --all --tests --examples -- --check
+        args: --all -- --check
 
     - name: check
       uses: actions-rs/cargo@v1
