--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -66,7 +66,21 @@ jobs:
         toolchain: ${{matrix.rust}}
         command: check
         args: --all --bins --tests --examples
+
+    - name: check
+      uses: actions-rs/cargo@v1
+      with:
+        toolchain: ${{matrix.rust}}
+        command: clippy
+        args: --all
     
+    - name: check no-default-features
+      uses: actions-rs/cargo@v1
+      with:
+        toolchain: ${{matrix.rust}}
+        command: check
+        args: --all --bins --tests --examples --no-default-features
+
     - name: tests
       uses: actions-rs/cargo@v1
       with:
