--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,6 @@ tuat-feed-parser = { path = "tuat-feed-parser" }
 tokio = { version = "0.2.11", features = ["macros"] }
 anyhow = "1.0.31"
 structopt = "0.3.14"
-warp = "0.2.4"
+warp = {version="0.2.4", default-features=false}
 env_logger = "0.7.1"
 log = "0.4.11"
