[add] cargo-cache to ci
should reduce the cache size

--- a/.github/workflows/check_build_test.yml
+++ b/.github/workflows/check_build_test.yml
@@ -80,3 +80,15 @@ jobs:
         toolchain: ${{matrix.rust}}
         command: test
         args: --all
+    
+    - name: install cargo-cache
+      uses: actrion-rs/install@v0.1
+      with:
+        crate: cargo-cache
+        version: latest
+        use-tool-cache: true
+
+    - name: clean cache
+      run: |
+        cargo cache --autoclean
+        cargo clean-unref
