--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ cache = []
 
 [dependencies]
 tuat-feed-parser = { path = "tuat-feed-parser" }
-tokio = { version = "0.3", features = ["macros", "sync", "rt-multi-thread"] }
+tokio = { version = "0.2", features = ["macros"] }
 anyhow = "1.0"
 warp = { version = "0.2", default-features = false }
 env_logger = "0.7"
 log = "0.4"
-pico-args = "0.3"
+argh = "0.1.3"
