--- a/tuat-feed-parser/Cargo.toml
+++ b/tuat-feed-parser/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 [dependencies]
 scraper = "0.12.0"
 serde = { version = "1.0.118", features = ["derive"] }
-reqwest = { version = "0.10.10", default-features = false }
+reqwest = { version = "0.11.0", default-features = false }
 futures = { version = "0.3.8", default-features = false }
 thiserror = "1.0.22"
 log = "0.4.11"
 
 [dev-dependencies]
-tokio = { version = "0.2.24", features = ["macros"] }
+tokio = { version = "1.0.2", features = ["full"] }
