--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ cache = []
 tuat-feed-parser = { path = "tuat-feed-parser" }
 tokio = { version = "1.0.1", features = ["full"] }
 anyhow = "1.0.35"
-warp = { version = "0.2.5", git = "https://github.com/seanmonstar/warp.git", default-features = false }
+warp = "0.3"
 env_logger = "0.8.2"
 log = "0.4.11"
 argh = "0.1.4"
