--- a/tuat-feed-parser/Cargo.toml
+++ b/tuat-feed-parser/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 [dependencies]
 scraper = "0.12.0"
 serde = { version = "1.0.118", features = ["derive"] }
-reqwest = { version = "0.11.0", default-features = false }
-futures = { version = "0.3.8", default-features = false }
+reqwest = "0.11.0"
+futures = "0.3.8"
 thiserror = "1.0.22"
 log = "0.4.11"
 
