--- a/.github/workflows/check_build_test.yml
+++ b/.github/workflows/check_build_test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        rust: [stable, nightly]
+        rust: [stable]
 
     steps:
     - uses: actions/checkout@v1
@@ -44,13 +44,6 @@ jobs:
         toolchain: ${{matrix.rust}}
         command: fmt
         args: --all -- --check
-        
-    - name: build
-      uses: actions-rs/cargo@v1
-      with:
-        toolchain: ${{matrix.rust}}
-        command: build
-        args: --all --bins --tests --examples
 
     - name: check
       uses: actions-rs/cargo@v1
