--- a/tuat-feed-parser/Cargo.toml
+++ b/tuat-feed-parser/Cargo.toml
@@ -11,7 +11,7 @@ exclude = ["**/*.html"]
 scraper = "0.12.0"
 serde = { version = "1.0.118", features = ["derive"] }
 reqwest = "0.11.0"
-futures = "0.3.8"
+futures-util = "0.3.8"
 thiserror = "1.0.22"
 log = "0.4.11"
 
