--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
 edition = "2018"
 include = ["src/main.rs", "LICENSE", "README.md"]
+license = "MPL-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
@@ -21,4 +22,4 @@ anyhow = "1.0.35"
 warp = "0.3"
 env_logger = "0.8.2"
 log = "0.4.11"
-argh = "0.1.4"
+structopt = "0.3.21"
