--- a/tuat-feed-parser/Cargo.toml
+++ b/tuat-feed-parser/Cargo.toml
@@ -3,6 +3,7 @@ name = "tuat-feed-parser"
 version = "0.1.0"
 authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
 edition = "2018"
+license = "MPL-2.0"
 
 exclude = ["**/*.html"]
 
