--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
 edition = "2018"
 include = ["src/main.rs", "LICENSE", "README.md"]
 license = "MPL-2.0"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
@@ -16,10 +17,10 @@ cache = []
 
 [dependencies]
 tuat-feed-parser = { path = "tuat-feed-parser" }
-tokio = { version = "1.0.1", features = ["full"] }
-serde = { version = "1.0.118", features = ["derive"] }
-anyhow = "1.0.35"
-warp = "0.3"
-env_logger = "0.8.2"
-log = "0.4.11"
-structopt = "0.3.21"
+tokio = { version = "1.8.1", features = ["full"] }
+serde = { version = "1.0.126", features = ["derive"] }
+anyhow = "1.0.42"
+warp = "0.3.1"
+env_logger = "0.9.0"
+log = "0.4.14"
+structopt = "0.3.22"
