--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ cache = []
 tuat-feed-parser = { path = "tuat-feed-parser" }
 tokio = { version = "1.8.1", features = ["full"] }
 serde = { version = "1.0.126", features = ["derive"] }
-anyhow = "1.0.42"
 warp = "0.3.1"
 env_logger = "0.9.0"
 log = "0.4.14"
 structopt = "0.3.22"
+color-eyre = "0.5.11"
