--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ cache = []
 [dependencies]
 tuat-feed-parser = { path = "tuat-feed-parser" }
 log = "0.4.14"
-color-eyre = "0.5.11"
 rocket = { version = "0.5.0-rc.1", features = ["json"] }
+anyhow = "1.0.44"
