--- a/.github/workflows/check_test.yml
+++ b/.github/workflows/check_test.yml
@@ -49,19 +49,12 @@ jobs:
           command: fmt
           args: --all -- --check
 
-      - name: check
-        uses: actions-rs/cargo@v1
-        with:
-          toolchain: ${{matrix.rust}}
-          command: check
-          args: --all --bins --tests --examples
-
       - name: clippy
         uses: actions-rs/cargo@v1
         with:
           toolchain: ${{matrix.rust}}
           command: clippy
-          args: --all
+          args: --all --all-targets
 
       - name: check no-default-features
         uses: actions-rs/cargo@v1
