--- a/tuat-feed-parser/Cargo.toml
+++ b/tuat-feed-parser/Cargo.toml
@@ -9,8 +9,8 @@ exclude = ["**/*.html"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 scraper = "0.12.0"
-serde = { version = "1.0.118", features = ["derive"] }
-reqwest = "0.11.0"
-thiserror = "1.0.22"
-log = "0.4.11"
-tokio = { version = "1.0.2" }
+serde = { version = "1.0.130", features = ["derive"] }
+reqwest = "0.11.6"
+thiserror = "1.0.30"
+log = "0.4.14"
+tokio = "1.12.0"
