--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ members = ["tuat-feed-parser"]
 [dependencies]
 tuat-feed-parser = { path = "tuat-feed-parser" }
 log = "0.4.14"
-rocket = { version = "0.5.0-rc.1", features = ["json"] }
+actix-web = "4.0.0-beta.13"
 anyhow = "1.0.44"
 serde = { version = "1.0.130", features = ["derive"] }
+tokio = { version = "1.14.0", features = ["full"] }
+env_logger = "0.9.0"
+actix-rt = "2.5.0"
