--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,2 @@
-[package]
-name = "tuat-feed-api"
-version = "0.3.0"
-authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
-edition = "2021"
-include = ["src/main.rs", "LICENSE", "README.md"]
-license = "MPL-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [workspace]
-members = ["tuat-feed-parser"]
-
-[dependencies]
-tuat-feed-parser = { path = "tuat-feed-parser" }
-log = "0.4.14"
-actix-web = "4.0.0-beta.13"
-anyhow = "1.0.44"
-serde = { version = "1.0.130", features = ["derive"] }
-tokio = { version = "1.14.0", features = ["full"] }
-env_logger = "0.9.0"
-actix-rt = "2.5.0"
+members = ["server/*", "client/*", "common/*"]
