--- a/server/tuat-feed-scraper/Cargo.toml
+++ b/server/tuat-feed-scraper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tuat-feed-parser"
+name = "tuat-feed-scraper"
 version = "0.2.0"
 authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
 edition = "2021"
@@ -8,6 +8,7 @@ exclude = ["**/*.html"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
+tuat-feed-common = { path = "../../common/tuat-feed-common" }
 scraper = "0.12.0"
 serde = { version = "1.0.130", features = ["derive"] }
 reqwest = "0.11.6"
