--- a/client/tuat-feed/Cargo.toml
+++ b/client/tuat-feed/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11.7", features = ["json"] }
 tokio = { version = "1.14.0", features = ["full"] }
-tuat-feed-common = { path = "../../common/tuat-feed-common" }
+tuat-feed-common = { path = "../../common/common" }
