--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -8,7 +8,7 @@ exclude = ["**/*.html"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-tuat-feed-common = { path = "../../common/tuat-feed-common" }
+tuat-feed-common = { path = "../../common/common" }
 scraper = "0.12.0"
 serde = { version = "1.0.130", features = ["derive"] }
 reqwest = "0.11.6"
