--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "rust-analyzer.checkOnSave.command": "clippy",
-    "rust-analyzer.experimental.procAttrMacros": false
+    "rust-analyzer.procMacro.attributes.enable": false,
+    "rust-analyzer.procMacro.enable": false
 }
