--- a/common/common/Cargo.toml
+++ b/common/common/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-serde = { version = "1.0.131", features = ["derive"] }
+serde = "1.0.138"
+serde_derive = "1.0.138"
