--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -10,12 +10,11 @@ exclude = ["**/*.html"]
 [dependencies]
 tuat-feed-common = { path = "../../common/common" }
 scraper = "0.13.0"
-serde = { version = "1.0.130", features = ["derive"] }
-reqwest = "0.11.6"
-thiserror = "1.0.30"
-log = "0.4.14"
-tokio = { version = "1.12.0", features = ["full"] }
+reqwest = "0.11.11"
+thiserror = "1.0.31"
+tokio = "1.19.2"
+tracing = "0.1.35"
 
+# serde_derive = "1.0.138"
 [dev-dependencies]
-serde_json = "1.0.74"
-
+serde_json = "1.0.82"
