--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -10,10 +10,12 @@ license = "MPL-2.0"
 [dependencies]
 tuat-feed-scraper = { path = "../feed-scraper" }
 tuat-feed-common = { path = "../../common/common" }
-log = "0.4.14"
-actix-web = "4.0.0-beta.13"
-anyhow = "1.0.44"
-serde = { version = "1.0.130", features = ["derive"] }
-tokio = { version = "1.14.0", features = ["full"] }
-env_logger = "0.9.0"
-actix-rt = "2.5.0"
+serde = "1.0.138"
+serde_derive = "1.0.138"
+tokio = { version = "1.19.2", features = ["full"] }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+tracing = "0.1.35"
+axum = { version = "0.6.0-rc.2", features = ["http2", "query"] }
+tower = "0.4.13"
+serde_json = "1.0.87"
+hyper = "0.14.20"
