--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -10,7 +10,7 @@ exclude = ["**/*.html"]
 [dependencies]
 tuat-feed-common = { path = "../../common/common" }
 scraper = "0.13.0"
-reqwest = "0.11.11"
+reqwest = { version = "0.11.12", features=["rustls"],default-features = false }
 thiserror = "1.0.31"
 tokio = "1.19.2"
 tracing = "0.1.35"
