--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -9,11 +9,12 @@ exclude = ["**/*.html"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 tuat-feed-common = { path = "../../common/common" }
-scraper = "0.13.0"
+scraper = "0.14.0"
 reqwest = { version = "0.11.12", features=["rustls"],default-features = false }
 thiserror = "1.0.31"
 tokio = "1.19.2"
 tracing = "0.1.35"
+backoff = { version = "0.4.0", features = ["futures","tokio"] }
 
 # serde_derive = "1.0.138"
 [dev-dependencies]
