--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -15,7 +15,8 @@ serde_derive = "1.0.138"
 tokio = { version = "1.19.2", features = ["full"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing = "0.1.35"
-axum = { version = "0.6.0-rc.2", features = ["http2","query"] }
+axum = { version = "0.6.5", features = ["http2", "query"] }
 tower = "0.4.13"
 serde_json = "1.0.87"
-hyper = "0.14.20"
+hyper = { version = "0.14.20", features = ["full"] }
+tower-http = { version = "0.3.5", features = ["trace"] }
