--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        rust: [stable]
+        rust: [nightly]
 
     steps:
       - uses: actions/checkout@v2
@@ -41,5 +41,14 @@ jobs:
           override: true
           components: rustfmt, clippy
       
+      - name: Install cargo-hack
+        uses: baptiste0928/cargo-install@v2
+        with:
+          crate: cargo-tarpaulin
+          
+      - name:                   Generate code coverage
+        run: |
+          cargo +nightly tarpaulin --verbose --all-features --workspace --timeout 120 --out Xml
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
