--- a/client/tuat-feed/Cargo.toml
+++ b/client/tuat-feed/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.7", features = ["json"] }
-tokio = { version = "1.14.0", features = ["full"] }
+# reqwest = { version = "0.11.7", features = ["json"] }
+tokio = { version = "1.14.0", features = [] }
 tuat-feed-common = { path = "../../common/common" }
