--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -10,12 +10,11 @@ exclude = ["**/*.html"]
 [dependencies]
 tuat-feed-common = { path = "../../common/common" }
 scraper = "0.16.0"
-reqwest = { version = "0.11.12", features=["rustls"],default-features = false }
+reqwest = "0.11.12"
 thiserror = "1.0.31"
 tokio = "1.19.2"
 tracing = "0.1.35"
-backoff = { version = "0.4.0", features = ["futures","tokio"] }
+backoff = { version = "0.4.0", features = ["futures", "tokio"] }
 
-# serde_derive = "1.0.138"
 [dev-dependencies]
 serde_json = "1.0.82"
