--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -9,8 +9,10 @@ exclude = ["**/*.html"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 tuat-feed-common = { path = "../../common/common" }
-scraper = "0.16.0"
-reqwest = "0.11.12"
+scraper = "0.17.0"
+reqwest = { version = "0.11.12", default-features = false, features = [
+    "rustls-tls"
+] }
 thiserror = "1.0.31"
 tokio = "1.19.2"
 tracing = "0.1.35"
