update deps and refactor nix

--- a/server/feed-scraper/Cargo.toml
+++ b/server/feed-scraper/Cargo.toml
@@ -8,15 +8,15 @@ exclude = ["**/*.html"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-tuat-feed-common = { path = "../../common/common" }
-scraper = "0.17.0"
+scraper = "0.18.0"
 reqwest = { version = "0.11.12", default-features = false, features = [
-    "rustls-tls"
+    # "rustls-tls"
 ] }
 thiserror = "1.0.31"
 tokio = "1.19.2"
 tracing = "0.1.35"
-backoff = { version = "0.4.0", features = ["futures", "tokio"] }
+serde_derive = "1.0.188"
+serde = "1.0.188"
 
 [dev-dependencies]
 serde_json = "1.0.82"
