--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -14,8 +14,9 @@ serde_derive = "1.0.138"
 tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing = "0.1.35"
-axum = { version = "0.6.5", features = ["query"] }
+axum = { version = "0.7.2", features = ["query"] }
 tower = "0.4.13"
 serde_json = "1.0.87"
-hyper = { version = "0.14.20" }
-tower-http = { version = "0.4.0", features = ["trace"] }
+hyper = "1.0.1"
+tower-http = { version = "0.5.0", features = ["trace"] }
+http-body-util = "0.1.0"
